fix: StatusStripe in light themes has low contrast
part of #7927

--- a/plugins/plugin-carbon-themes/web/scss/carbon-gray10.scss
+++ b/plugins/plugin-carbon-themes/web/scss/carbon-gray10.scss
@@ -29,7 +29,7 @@ body[kui-theme='Carbon Gray10'] {
   @include Sidecar {
     @include carbon-inverted;
   }
-  @include StatusStripe {
+  @include StatusStripeWithDefaultColors {
     @include carbon-inverted;
   }
   @include CommentaryEditor {
